fixed hero section height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body {
 
 @media (max-width: 820px) {
   .container {
-    grid-template-rows: min-content 100vh repeat(9, min-content);
+    grid-template-rows: min-content 95vh repeat(9, min-content);
   }
 }
 
@@ -257,7 +257,7 @@ i {
     top: 0;
     left: 0;
     width: 25rem;
-    height: 100vh;
+    height: 95vh;
     line-height: initial;
     flex-direction: column;
     text-align: center;
@@ -370,6 +370,7 @@ i {
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  max-height: 95vh;
 }
 
 .hero__content {
