--- a/sass/_4-header.scss
+++ b/sass/_4-header.scss
@@ -207,7 +207,7 @@
             top: 0;
             left: 0;
             width: 25rem;
-            height: 100vh;
+            height: 95vh;
             line-height: initial;
             flex-direction: column;
             text-align: center;
