--- a/sass/_5-hero.scss
+++ b/sass/_5-hero.scss
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    max-height: 95vh;
 
     &__content {
         display: flex;
